--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/import-types-preset": "^2.1.20",
-    "@graphql-codegen/introspection": "2.1.1",
-    "@graphql-codegen/typed-document-node": "^2.2.13",
-    "@graphql-codegen/typescript": "2.5.1",
-    "@graphql-codegen/typescript-document-nodes": "2.2.13",
-    "@graphql-codegen/typescript-graphql-files-modules": "^2.1.1",
-    "@graphql-codegen/typescript-operations": "2.4.2",
-    "@graphql-codegen/typescript-resolvers": "^2.6.6",
+		"@graphql-codegen/import-types-preset": "^2.1.20",
+		"@graphql-codegen/introspection": "2.1.1",
+		"@graphql-codegen/typed-document-node": "^2.2.13",
+		"@graphql-codegen/typescript": "2.5.1",
+		"@graphql-codegen/typescript-document-nodes": "2.2.13",
+		"@graphql-codegen/typescript-graphql-files-modules": "^2.1.1",
+		"@graphql-codegen/typescript-operations": "2.4.2",
+		"@graphql-codegen/typescript-resolvers": "^2.6.6",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.6.9",
 		"@rollup/plugin-graphql": "^1.1.0",
+		"@urql/svelte": "^3.0.1",
 		"datocms-client": "^3.5.21",
 		"dotenv": "^16.0.1",
 		"graphql": "^16.6.0",
