--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
 	},
 	"include": [
 		"ambient.d.ts",
@@ -24,7 +24,7 @@
 		"./tests/**/*.svelte",
 		"./src/**/*.graphql"
 	],
-	"typeRoots": ["./src/@types"],
+	"typeRoots": ["./src/@types/**/*"],
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
