--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.6.9",
 		"@rollup/plugin-graphql": "^1.1.0",
+		"@sveltejs/adapter-vercel": "next",
 		"@urql/svelte": "^3.0.1",
 		"datocms-client": "^3.5.21",
 		"dotenv": "^16.0.1",
