--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev & npm run codegen:watch",
 		"build": "vite build",
 		"preview": "npm run build && vite preview",
 		"codegen": "graphql-codegen",
+		"codegen:watch": "graphql-codegen --watch",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
@@ -22,10 +23,11 @@
 		"@graphql-codegen/typescript-graphql-files-modules": "^2.1.1",
 		"@graphql-codegen/typescript-operations": "2.4.2",
 		"@graphql-codegen/typescript-resolvers": "^2.6.6",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "^1.0.0-next.437",
+		"@sveltejs/adapter-auto": "^1.0.0-next.71",
+		"@sveltejs/kit": "^1.0.0-next.465",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"barrelsby": "^2.4.0",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -36,13 +38,13 @@
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.4"
+		"vite": "^3.0.9"
 	},
 	"type": "module",
 	"dependencies": {
 		"@apollo/client": "^3.6.9",
 		"@rollup/plugin-graphql": "^1.1.0",
-		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.72",
 		"@urql/svelte": "^3.0.1",
 		"datocms-client": "^3.5.21",
 		"dotenv": "^16.0.1",
